# adocao-caosciente-backend

./: .gitignore  README.md  docker-compose.yml  entrypoint.sh  index.py  logging.conf  main.py  pyproject.toml  render.yml  requirements.txt  vercel.json
app/: main.py
app/config/: settings.py
app/domain/database/: db.py
app/domain/models/: adopter.py  animal.py  answerSheet.py  email.py  form.py  login.py  ong.py  roles.py
app/domain/models/dto/: ongResponse.py  response.py
app/domain/models/email_template/: html_email_template.py
app/routes/: adopter_route.py  animal_route.py  answer_sheet_route.py  auth_route.py  email_route.py  form_route.py  login_route.py  ong_route.py
app/seed/: animals.json  seed.py
app/services/: adopter_service.py  animal_service.py  answer_sheet_service.py  auth_service.py  email_service.py  form_service.py  jwt_service.py  login_service.py  ong_service.py
app/utils/: mask.py  utils.py
docs/: swagger_dump.json
domain/: entities.py
routes/: animal_route.py  login_route.py  ong_route.py
tests/ong_service/: utils.py
tests/ong_service/functional/: ong.feature  test_create_ong.feature  test_create_ong.py  test_find_ong.feature  test_find_ong.py  test_ong.py  test_update_ong.feature  test_update_ong.py
utils/: mask.py  util.py
