[tool.poetry]
name = "adocao-caosciente-backend"
version = "1.4.0"
description = ""
authors = ["Nicolas de Góes"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pymongo = "^4.7.0"
PyJWT = "^2.8.0"
pydantic-settings = "^2.0.3"
bcrypt = "^4.1.2"
pytest_bdd = "7.0.0"
pytest = "7.4.3"
six = "1.15.0"
faker = "20.1.0"
levenshtein = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
